--- a/trading/fundamentals/basics.mdx
+++ b/trading/fundamentals/basics.mdx
@@ -11,46 +11,33 @@ icon: 'book-open'
   <span>Last updated: January 2025</span>
 </div>
 
-<Frame>
-  <img
-    className="block dark:hidden"
-    src="/images/trading-basics-light.png"
-    alt="Trading Fundamentals Dashboard"
-  />
-  <img
-    className="hidden dark:block"
-    src="/images/trading-basics-dark.png"
-    alt="Trading Fundamentals Dashboard"
-  />
-</Frame>
-
 ## Understanding Stocks: Your Ownership in Corporate America
 
 A stock represents fractional ownership in a corporation. When you buy shares, you're not just purchasing a piece of paper or digital entry - you're becoming a part-owner of a real business with real assets, employees, and operations.
 
 ### What Stock Ownership Really Means
 
-**Ownership Stake**: If Apple has 15.5 billion shares outstanding and you own 100 shares, you own 0.000000645% of the entire company - including its cash, real estate, intellectual property, and future earnings.
+- **Ownership Stake**: If Apple has 15.5 billion shares outstanding and you own 100 shares, you own 0.000000645% of the entire company - including its cash, real estate, intellectual property, and future earnings.
 
-**Claim on Assets**: In the unlikely event of bankruptcy, shareholders have a claim on company assets after creditors and bondholders are paid.
+- **Claim on Assets**: In the unlikely event of bankruptcy, shareholders have a claim on company assets after creditors and bondholders are paid.
 
-**Voting Rights**: Most stocks grant voting rights on major corporate decisions like electing board members, approving mergers, or changing corporate structure.
+- **Voting Rights**: Most stocks grant voting rights on major corporate decisions like electing board members, approving mergers, or changing corporate structure.
 
-**Profit Sharing**: Companies may distribute profits through dividends or reinvest for growth, both of which benefit shareholders.
+- **Profit Sharing**: Companies may distribute profits through dividends or reinvest for growth, both of which benefit shareholders.
 
-<div className="p-6 rounded-xl border border-slate-700 my-6">
-  <div className="flex items-center gap-3 mb-4">
+<div className="p-6 rounded-xl border border-slate-700">
+  <div className="flex  items-start gap-3 mb-4">
     <div className="w-12 h-12 bg-slate-600 rounded-xl flex items-center justify-center">
-      <span className="text-slate-200 text-xl">bar-chart</span>
+      <Icon icon="users" size={24} className="text-white" />
     </div>
-    <div>
-      <h3 className="text-lg font-bold text-slate-200">Stock Ownership Example</h3>
-      <p className="text-slate-400 text-sm">Understanding your stake in real companies</p>
+    <div className='flex flex-col'>
+      <span className="text-lg font-bold text-slate-200">Stock Ownership Example</span>
+      <span className="text-slate-400 text-sm">Understanding your stake in real companies</span>
     </div>
   </div>
 
   <p className="text-slate-300 mb-4">
-    Let's say you own 100 shares of Microsoft at $400 per share ($40,000 investment). Microsoft has approximately 7.4 billion shares outstanding, meaning you own about 0.00000135% of the company.
+    Let's say you own 100 shares of Microsoft at &#36;400 per share (&#36;40,000 investment). Microsoft has approximately 7.4 billion shares outstanding, meaning you own about 0.00000135% of the company.
   </p>
 
   <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -60,7 +47,7 @@ A stock represents fractional ownership in a corporation. When you buy shares, y
     </div>
     <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
       <div className="text-slate-300 font-semibold text-sm mb-1">Your Income</div>
-      <div className="text-slate-300 text-sm">Potential dividend payments</div>
+      <div className="text-slate-400 text-sm">Potential dividend payments</div>
     </div>
     <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
       <div className="text-slate-300 font-semibold text-sm mb-1">Your Growth</div>
@@ -71,15 +58,15 @@ A stock represents fractional ownership in a corporation. When you buy shares, y
 
 ### Different Types of Stock
 
-**Common Stock**: The standard type of stock that gives you voting rights and potential dividends. Most stocks you'll encounter are common stock.
+- **Common Stock**: The standard type of stock that gives you voting rights and potential dividends. Most stocks you'll encounter are common stock.
 
-**Preferred Stock**: Priority over common stock for dividends and liquidation, but usually no voting rights. Acts more like a bond with fixed dividend payments.
+- **Preferred Stock**: Priority over common stock for dividends and liquidation, but usually no voting rights. Acts more like a bond with fixed dividend payments.
 
-**Growth Stocks**: Companies that reinvest most profits to fuel expansion rather than paying dividends. Examples: Tesla, Amazon (historically).
+- **Growth Stocks**: Companies that reinvest most profits to fuel expansion rather than paying dividends. Examples: Tesla, Amazon (historically).
 
-**Value Stocks**: Established companies trading below their intrinsic value, often with steady dividends. Examples: Berkshire Hathaway, Johnson & Johnson.
+- **Value Stocks**: Established companies trading below their intrinsic value, often with steady dividends. Examples: Berkshire Hathaway, Johnson & Johnson.
 
-**Dividend Stocks**: Companies that regularly pay shareholders a portion of profits. Popular with income-focused investors.
+- **Dividend Stocks**: Companies that regularly pay shareholders a portion of profits. Popular with income-focused investors.
 
 ## How Stock Prices Work: The Auction System
 
@@ -91,42 +78,19 @@ Understanding how stock prices are determined is crucial for making informed inv
 **Ask Price**: The lowest price a seller is willing to accept.
 **Spread**: The difference between bid and ask prices.
 
-Example: If Apple's bid is $199.50 and ask is $199.55, the spread is $0.05. Tighter spreads indicate more liquid (easily tradeable) stocks.
+Example: If Apple's bid is &#36;199.50 and ask is &#36;199.55, the spread is &#36;0.05. Tighter spreads indicate more liquid (easily tradeable) stocks.
 
 ### Market Orders vs. Limit Orders
 
 **Market Order**: Buy or sell immediately at the current market price.
-- Pros: Immediate execution, guaranteed fill
-- Cons: Price uncertainty, especially in volatile markets
-- Best for: Liquid stocks during normal market hours
+- <span className='font-semibold text-slate-200'>Pros</span>: Immediate execution, guaranteed fill
+- <span className='font-semibold text-slate-200'>Cons</span>: Price uncertainty, especially in volatile markets
+- <span className='font-semibold text-slate-200'>Best for</span>: Liquid stocks during normal market hours
 
 **Limit Order**: Buy or sell only at a specific price or better.
-- Pros: Price control, potential for better execution
-- Cons: May not execute if price doesn't reach your limit
-- Best for: Volatile stocks, large orders, or when you have a specific target price
-
-### Factors That Move Stock Prices
-
-**Company-Specific News**:
-- Earnings reports (quarterly financial results)
-- Product launches or failures
-- Management changes
-- Mergers and acquisitions
-- Regulatory approvals or violations
-
-**Economic Indicators**:
-- Interest rate changes by Federal Reserve
-- GDP growth or recession signals
-- Employment data
-- Inflation measurements
-- Consumer confidence surveys
-
-**Market Psychology**:
-- Fear and greed cycles
-- Technical trading patterns
-- Momentum and trend following
-- Analyst upgrades/downgrades
-- Social media and news sentiment
+- <span className='font-semibold text-slate-200'>Pros</span>: Price control, potential for better execution
+- <span className='font-semibold text-slate-200'>Cons</span>: May not execute if price doesn't reach your limit
+- <span className='font-semibold text-slate-200'>Best for</span>: Volatile stocks, large orders, or when you have a specific target price
 
 ## Investment vs. Trading: Choosing Your Approach
 
@@ -134,31 +98,25 @@ The distinction between investing and trading is fundamental to your strategy an
 
 ### Long-Term Investing (Recommended for Beginners)
 
-**Time Horizon**: Years to decades
-**Strategy**: Buy quality companies and hold through market cycles
-**Analysis**: Focus on fundamental analysis (company financials, competitive advantages)
-**Trading Frequency**: Minimal - perhaps a few trades per year
-**Tax Efficiency**: More favorable long-term capital gains rates
-**Stress Level**: Lower - less daily market monitoring needed
+- **Time Horizon**: Years to decades
+- **Strategy**: Buy quality companies and hold through market cycles
+- **Analysis**: Focus on fundamental analysis (company financials, competitive advantages)
+- **Trading Frequency**: Minimal - perhaps a few trades per year
+- **Tax Efficiency**: More favorable long-term capital gains rates
+- **Stress Level**: Lower - less daily market monitoring needed
 
 **Example**: Warren Buffett's approach - buying Coca-Cola in 1988 and still holding it 35+ years later.
 
 ### Short-Term Trading
 
-**Time Horizon**: Minutes to months
-**Strategy**: Profit from short-term price movements
-**Analysis**: Heavy reliance on technical analysis (charts, patterns)
-**Trading Frequency**: High - potentially multiple trades per day
-**Tax Implications**: Higher short-term capital gains rates
-**Stress Level**: Higher - requires constant market monitoring
+- **Time Horizon**: Minutes to months
+- **Strategy**: Profit from short-term price movements
+- **Analysis**: Heavy reliance on technical analysis (charts, patterns)
+- **Trading Frequency**: High - potentially multiple trades per day
+- **Tax Implications**: Higher short-term capital gains rates
+- **Stress Level**: Higher - requires constant market monitoring
 
 **Reality Check**: Studies show 80%+ of day traders lose money over time. Transaction costs and taxes erode profits.
-
-### Hybrid Approach: Core-Satellite Strategy
-
-Many successful investors use a combination:
-- **Core Holdings (80-90%)**: Long-term investments in diversified index funds and quality individual stocks
-- **Satellite Holdings (10-20%)**: More speculative investments, sector bets, or short-term trades
 
 ## Understanding Market Capitalization and Company Size
 
@@ -168,20 +126,20 @@ Market capitalization (market cap) represents the total value of a company's sha
 
 ### Size Categories and Characteristics
 
-**Large Cap ($10+ Billion)**
-- Examples: Apple ($3T+), Microsoft ($2.5T+), Amazon ($1.5T+)
+**Large Cap (&#36;10+ Billion)**
+- Examples: Apple (&#36;3T+), Microsoft (&#36;2.5T+), Amazon (&#36;1.5T+)
 - Characteristics: Stable, established businesses with global reach
 - Volatility: Lower day-to-day price swings
 - Dividends: Often pay steady dividends
 - Growth: Slower but more predictable growth
 
-**Mid Cap ($2-10 Billion)**
-- Examples: Zoom ($25B), Peloton ($3B), Robinhood ($8B)
+**Mid Cap (&#36;2-10 Billion)**
+- Examples: Zoom (&#36;2.5B), Peloton (&#36;3B), Robinhood (&#36;8B)
 - Characteristics: Growing companies with established market position
 - Volatility: Moderate price swings
 - Growth: Balance of stability and growth potential
 
-**Small Cap ($300M-2 Billion)**
+**Small Cap (&#36;300M-2 Billion)**
 - Examples: Many regional banks, biotech companies, specialty retailers
 - Characteristics: Younger companies with high growth potential
 - Volatility: Higher price swings, more sensitive to market conditions
@@ -193,167 +151,22 @@ Market capitalization (market cap) represents the total value of a company's sha
 - Information: Less analyst coverage and financial reporting
 - Risk: Highest risk but potentially highest rewards
 
-### Portfolio Allocation by Market Cap
-
-**Conservative**: 70% Large Cap, 20% Mid Cap, 10% Small Cap
-**Moderate**: 60% Large Cap, 25% Mid Cap, 15% Small Cap
-**Aggressive**: 50% Large Cap, 30% Mid Cap, 20% Small Cap
-
-## Key Trading Terms
-
-<CardGroup cols={2}>
-  <Card title="dollar-sign Bid & Ask" icon="handshake" color="#7c3aed">
-    **Bid**: Highest price buyers are willing to pay
-
-    **Ask**: Lowest price sellers are willing to accept
-
-    **Spread**: Difference between bid and ask prices
-  </Card>
-
-  <Card title="💧 Volume & Liquidity" icon="droplet" color="#06b6d4">
-    **Volume**: Number of shares traded in a period
-
-    **Liquidity**: How easily you can buy/sell without affecting price
-
-    Higher volume = Better liquidity
-  </Card>
-
-  <Card title="Market Cap" icon="building">
-    **Market Capitalization** = Share Price × Outstanding Shares
-
-    - **Large Cap**: > $10B
-    - **Mid Cap**: $2B - $10B
-    - **Small Cap**: < $2B
-  </Card>
-
-  <Card title="Volatility" icon="chart-line-up">
-    Measure of price fluctuation over time
-
-    - **High Volatility**: Large price swings
-    - **Low Volatility**: Stable price movements
-
-    Higher risk = Higher potential returns
-  </Card>
-</CardGroup>
-
-## Order Types
-
-<div className="bg-slate-900/50">
-  <h3 className="text-lg font-semibold text-slate-200 mb-6 text-center">Understanding Order Types is Crucial for Effective Trading</h3>
-
-  <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
-    <div className="bg-emerald-50 dark:bg-emerald-900/20 p-5 rounded-xl border border-slate-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">FAST</span>
-        </div>
-        <h4 className="text-emerald-800 dark:text-emerald-200 font-bold">Market Order</h4>
-      </div>
-      <p className="text-emerald-700 dark:text-emerald-300 text-sm mb-4">
-        Executes immediately at the current market price
-      </p>
-      <div className="space-y-2">
-        <div className="text-xs font-semibold text-emerald-800 dark:text-emerald-200 mb-2">Best for:</div>
-        <div className="space-y-1 text-xs text-emerald-700 dark:text-emerald-300">
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Quick execution</span>
-          </div>
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Highly liquid stocks</span>
-          </div>
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>When speed matters most</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div className="bg-blue-50 dark:bg-blue-900/20 p-5 rounded-xl border border-slate-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">AIM</span>
-        </div>
-        <h4 className="text-blue-800 dark:text-blue-200 font-bold">Limit Order</h4>
-      </div>
-      <p className="text-blue-700 dark:text-blue-300 text-sm mb-4">
-        Executes only at specified price or better
-      </p>
-      <div className="space-y-2">
-        <div className="text-xs font-semibold text-blue-800 dark:text-blue-200 mb-2">Best for:</div>
-        <div className="space-y-1 text-xs text-blue-700 dark:text-blue-300">
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Price control</span>
-          </div>
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Volatile markets</span>
-          </div>
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Non-urgent trades</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div className="bg-orange-50 dark:bg-orange-900/20 p-5 rounded-xl border border-slate-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">🛑</span>
-        </div>
-        <h4 className="text-orange-800 dark:text-orange-200 font-bold">Stop Order</h4>
-      </div>
-      <p className="text-orange-700 dark:text-orange-300 text-sm mb-4">
-        Becomes market order when stop price is reached
-      </p>
-      <div className="space-y-2">
-        <div className="text-xs font-semibold text-orange-800 dark:text-orange-200 mb-2">Best for:</div>
-        <div className="space-y-1 text-xs text-orange-700 dark:text-orange-300">
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Risk management</span>
-          </div>
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Limiting losses</span>
-          </div>
-          <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>Protecting profits</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 ## Financial Metrics
 
 <div className="bg-amber-50 dark:bg-amber-900/20 border border-slate-700 rounded-lg p-4 my-6">
   <div className="flex items-start gap-3">
-    <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
-      <span className="text-white text-sm">lightbulb</span>
+    <div className="w-12 h-12 bg-amber-800/30 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
+      <Icon icon="lightbulb" size={16} />
     </div>
     <div>
-      <p className="text-amber-800 dark:text-amber-200 text-sm">
+      <span className="text-amber-800 dark:text-amber-200 text-sm">
         <strong>Key Insight:</strong> These metrics help you evaluate whether a stock is fairly valued and worth investing in.
-      </p>
+      </span>
     </div>
   </div>
 </div>
 
-### Valuation Metrics
-
 <div className="bg-slate-900/50">
-  <div className="text-center mb-6">
-    <h4 className="text-lg font-bold text-slate-200 mb-2">bar-chart Key Financial Ratios</h4>
-    <p className="text-slate-400 text-sm">Essential metrics for stock evaluation</p>
-  </div>
-
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div className="bg-slate-800/50 p-5 rounded-xl border border-violet-200 dark:border-violet-700">
       <div className="flex items-center gap-3 mb-3">
@@ -406,88 +219,6 @@ Market capitalization (market cap) represents the total value of a company's sha
       <div>Stock Price: $100</div>
       <div>Earnings Per Share: $5</div>
       <div className="text-violet-600 dark:text-violet-400">P/E Ratio: $100 ÷ $5 = 20x</div>
-    </div>
-  </div>
-</div>
-
-## Risk Management Basics
-
-<div className="bg-red-50 dark:bg-red-900/20 border border-slate-700 rounded-lg p-6 my-8">
-  <div className="flex items-start gap-4">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
-      <span className="text-white text-xl">alert-triangle</span>
-    </div>
-    <div>
-      <h4 className="text-red-800 dark:text-red-200 font-bold text-lg mb-2">Golden Rule of Trading</h4>
-      <p className="text-red-700 dark:text-red-300">
-        Never risk more than you can afford to lose on a single trade. This is the foundation of successful long-term investing.
-      </p>
-    </div>
-  </div>
-</div>
-
-<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">bar-chart</span>
-      </div>
-      <h4 className="font-bold text-blue-900 dark:text-blue-100">Position Sizing</h4>
-    </div>
-    <p className="text-blue-800 dark:text-blue-200 text-sm mb-3">
-      Never put more than 2-5% of your portfolio in a single stock
-    </p>
-    <div className="bg-slate-800/50 p-3 rounded-lg">
-      <div className="text-xs text-blue-700 dark:text-blue-300">Example: $10,000 portfolio</div>
-      <div className="text-blue-600 dark:text-blue-400 font-semibold">Max per stock: $200-$500</div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">🛑</span>
-      </div>
-      <h4 className="font-bold text-red-900 dark:text-red-100">Stop Losses</h4>
-    </div>
-    <p className="text-red-800 dark:text-red-200 text-sm mb-3">
-      Set predetermined exit points to limit losses
-    </p>
-    <div className="bg-slate-800/50 p-3 rounded-lg">
-      <div className="text-xs text-red-700 dark:text-red-300">Common rule: -10% stop loss</div>
-      <div className="text-red-600 dark:text-red-400 font-semibold">Protects your capital</div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">globe</span>
-      </div>
-      <h4 className="font-bold text-green-900 dark:text-green-100">Diversification</h4>
-    </div>
-    <p className="text-green-800 dark:text-green-200 text-sm mb-3">
-      Spread investments across different sectors and asset classes
-    </p>
-    <div className="bg-slate-800/50 p-3 rounded-lg">
-      <div className="text-xs text-green-700 dark:text-green-300">Don't put all eggs in one basket</div>
-      <div className="text-green-600 dark:text-green-400 font-semibold">Reduces overall risk</div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">search</span>
-      </div>
-      <h4 className="font-bold text-purple-900 dark:text-purple-100">Research</h4>
-    </div>
-    <p className="text-purple-800 dark:text-purple-200 text-sm mb-3">
-      Always understand what you're investing in
-    </p>
-    <div className="bg-slate-800/50 p-3 rounded-lg">
-      <div className="text-xs text-purple-700 dark:text-purple-300">Know the company & industry</div>
-      <div className="text-purple-600 dark:text-purple-400 font-semibold">Informed decisions only</div>
     </div>
   </div>
 </div>
